deployment/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: great-books-api
  namespace: great-books
spec:
  replicas: 2
  selector:
    matchLabels:
      app: great-books-api
  template:
    metadata:
      labels:
        app: great-books-api
    spec:
      containers:
        - name: great-books-api
          image: samwilk18/great-books-api:latest
          ports:
            - containerPort: 4000
