deployment/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: great-books-api-service
  namespace: great-books
spec:
  selector:
    app: great-books-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
