deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: great-books-ingress
  namespace: great-books
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: great-books-api-service
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: great-books-service
                port:
                  number: 80
